--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.application.name=RememberBirthdays
 spring.datasource.url=jdbc:postgresql://localhost:5432/birthdaysDb
 spring.datasource.username=postgres
-spring.datasource.password= selftaught2025$
+spring.datasource.password=selftaught2025$
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8081
-spring:
-    security:
-        oauth2:
-            resourceserver:
-                jwt:
-                    issuer-uri: http://localhost:8080/realms/rememberBirthdays-realm
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/RememberBirthdays
+
+
