--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
+
 spring.application.name=RememberBirthdays
 spring.datasource.url=jdbc:postgresql://localhost:5432/birthdaysDb
 spring.datasource.username=postgres
@@ -7,6 +10,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8081
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/RememberBirthdays
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:8080/realms/RememberBirthdays
 
 
