--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
+
+		<!-- Keycloak admin -->
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-admin-client</artifactId>
+			<version>22.0.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
