--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
 			<version>22.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 	</dependencies>
 
