--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
 	</properties>
 	<dependencies>
 
+		<!-- SendGrid Java Library -->
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.10.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
